[gd_scene load_steps=3 format=3 uid="uid://dvt5vx1cxba5x"]

[ext_resource type="Script" uid="uid://c77qixq6yio7o" path="res://scripts/map_deck_viewer.gd" id="1_ymh2u"]
[ext_resource type="PackedScene" uid="uid://bl2dchpgxx6h6" path="res://scenes/card_tool_tip.tscn" id="2_1fecb"]

[node name="MapDeckViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymh2u")

[node name="VBoxContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DeckCountLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2

[node name="ExhaustCountLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 2

[node name="CardsContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="CardToolTip" parent="." instance=ExtResource("2_1fecb")]
layout_mode = 0
